<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/editBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit" />
      
     <Button
         android:id="@+id/moveBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/move" />

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove" />
 
</LinearLayout>