<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/editPlaylistBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editPlaylist" />
      
     <Button
         android:id="@+id/sortAlphaBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sortAlphabetically" />

    <Button
        android:id="@+id/otherSettingsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otherSettings" />
 
</LinearLayout>