<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.zenas.backgroundmusic.activities.MainActivity" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/wallpaperView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/wallpaper"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/spacingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Button"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="5dp"
                            android:shadowColor="#000000"
                            android:shadowRadius="2"
                            android:text="@string/playlists"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <Button
                            android:id="@+id/mainHelpBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/help" />

                    </RelativeLayout>
                </LinearLayout>
                
                    <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#66FFFFFF" />

                <ListView
                    android:id="@+id/folder_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.21"
                    android:drawSelectorOnTop="false"
                    android:paddingTop="5dp" >
                </ListView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/upBtn"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moveUp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/downBtn"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moveDown"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/doneBtn"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/songName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" >

                        <Button
                            android:id="@+id/newBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newPlaylist" />

                        <Button
                            android:id="@+id/settings_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/settings_button" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

</FrameLayout>

<!-- </FrameLayout>-->
